# fear

./: .gitignore  CMakeLists.txt  README.md  Thumbs.db  build.bat  build.sh  pack_release.bat  pack_release.sh
audio_call/: CMakeLists.txt
audio_call/include/: audio_codec.h  audio_crypto.h  audio_hub.h  audio_network.h  audio_ring.h  audio_types.h
audio_call/src/: audio_call.c  audio_codec.c  audio_crypto.c  audio_hub.c  audio_network.c  audio_ring.c
client-console/: CMakeLists.txt  Makefile
client-console/include/: client.h  common.h  crypto_message.h  network.h  server.h
client-console/src/: client.c  common.c  main.c  network.c  server.c
doc/: BUILD.md  Build_instructions.txt  CODE_STRUCTURE.md  QUICKSTART.md  SECURITY_AUDIT_REPORT.md  TODO.md  build_instructions.txt  manual.md  project_remarks.txt  todo_list.txt
gui/src/: CMakeLists.txt  app_icon.rc.in  audiocalldialog.cpp  audiocalldialog.h  audiocallmanager.cpp  audiocallmanager.h  backend.cpp  backend.h  dh.c  dh.h  key_exchange.cpp  key_exchange.h  keyexchangedialog.cpp  keyexchangedialog.h  knownkeysdialog.cpp  knownkeysdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  updatedialog.cpp  updatedialog.h  videocalldialog.cpp  videocalldialog.h  videocallmanager.cpp  videocallmanager.h
gui/src/.build/: Makefile  qrc_resources.cpp
gui/src/.build/.qt/: QtDeploySupport.cmake
gui/src/.build/fear_gui_autogen/: deps  mocs_compilation.cpp
gui/src/.build/fear_gui_autogen/EWIEGA46WW/: moc_audiocalldialog.cpp  moc_audiocalldialog.cpp.d  moc_audiocallmanager.cpp  moc_audiocallmanager.cpp.d  moc_backend.cpp  moc_backend.cpp.d  moc_key_exchange.cpp  moc_key_exchange.cpp.d  moc_keyexchangedialog.cpp  moc_keyexchangedialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_updatedialog.cpp  moc_updatedialog.cpp.d  moc_videocalldialog.cpp  moc_videocalldialog.cpp.d  moc_videocallmanager.cpp  moc_videocallmanager.cpp.d
identity/: identity.c  identity.h
key-exchange/: CMakeLists.txt  Makefile  README.md
key-exchange/src/: key-exchange.c
lib/: build-ffmpeg-static.sh
updater/: CMakeLists.txt  Makefile  README_RELEASE.md  fear.exe.bak  updater.c  updater.conf
updater/curl-8.15.0_5-win64-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
updater/curl-8.15.0_5-win64-mingw/dep/ngtcp2/: ChangeLog.txt
updater/src/: updater.c
video_call/: CMakeLists.txt
video_call/include/: video_capture.h  video_codec.h  video_display.h  video_fragment.h  video_quality.h  video_types.h
video_call/src/: video_call.c  video_capture.c  video_codec.c  video_display.c  video_fragment.c  video_quality.c
web/: package-lock.json  package.json  server.js
web/public/: app.js  crypto.js  filetransfer.js  identity.js  index.html  style.css
